# framework-fastapi-boilerplate

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: initial_data.py  main.py
app/alembic/: env.py
app/alembic/versions/: d19241fe0efb_create_users_table_with_admin.py
app/api/: deps.py
app/api/api_v1/: __init__.py  api.py
app/api/api_v1/endpoints/: auth.py  users.py  utils.py
app/core/: config.py  db.py  security.py
app/email-templates/: new_account.mjml  reset_password.mjml
app/models/: user.py
app/schemas/: token.py  user.py
app/utils/: email.py
docs/: ALEMBIC.md
